- Fix css z-index issue

--- a/src/app/features/details/details.component.scss
+++ b/src/app/features/details/details.component.scss
@@ -488,6 +488,10 @@
               top: 64px;
               height: auto;
               width: auto;
+
+              @include small-screen {
+                top: 56px;
+              }
             }
           }
         }
