--- a/src/app/shared/components/registrations-grid/registrations-grid.component.scss
+++ b/src/app/shared/components/registrations-grid/registrations-grid.component.scss
@@ -27,6 +27,7 @@
 
         th, td {
           vertical-align: middle;
+          z-index: 1 !important;
         }
 
         .mat-row {
